fix: prevent navbar overlap

--- a/src/index.css
+++ b/src/index.css
@@ -47,10 +47,11 @@ body {
   display: none; /* Chrome, Safari, Opera */
 }
 
-.ck.ck-editor__top {
+.main-content .ck.ck-editor__top {
   position: sticky !important;
   top: 0 !important;
-  z-index: 999 !important;
+  z-index: 10 !important; 
+  background: inherit !important;
 }
 
 .dark .ck.ck-editor__editable_inline {
